fix author name and occupation spacing on desktop breakpoints

--- a/src/style.scss
+++ b/src/style.scss
@@ -203,6 +203,7 @@ body {
     }
     .slider__quotes__author .slider__quotes__author__name {
       display: inline;
+      margin-right: 10px;
     }
   }
 }
